2005-01-112  Jordi Mas i Hernandez <jordi@ximian.com>

	* ContainerControl.cs, ListControl.cs, ListBox.cs: keyboard navigation and
	bug fixes

2005-01-12  Peter Bartok  <pbartok@novell.com>

	* Control.cs:
	  - Fixed broken Contains() method
	  - Implemented GetNextControl() method. Finally. This is the pre-
	    requisite for focus handling.

2005-01-12  Peter Bartok  <pbartok@novell.com>

	* OSXStrucs.cs: Added

2005-01-12  Peter Bartok  <pbartok@novell.com>

	* XplatUIWin32.cs:
	  - Removed PeekMessageFlags
	  - Implemented SetWindowStyle() method
	* XplatUIStructs.cs: Added PeekMessageFlags
	* X11Structs: Added missing border_width field to XWindowChanges struct
	* XplatUIX11.cs:
	  - PeekMessage: Now throws exception if flags which are not yet 
	    supported are passed
	  - Implemented SetWindowStyle() method
	  - Fixed SetZOrder to handle AfterHwnd properly
	* XplatUI.cs: Added SetWindowStyle() method
	* XplatUIDriver.cs: Added SetWindowStyle() abstract
	* Control.cs:
	  - Implemented UpdateStyles() method
	  - Implemented UpdateZOrder() method
	* XplatUIOSX.cs: Added SetWindowStyle() stub

2005-01-12  Geoff Norton  <gnorton@customerdna.com>

	* XplatUIOSX.cs: Fix SetZOrder (this needs more testing with a 3 
	button mouse).


2005-01-11  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Still need to draw lines to siblings even if out of
	the current node is out of the clip.

2005-01-11  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: When setting the hbar/vbar/grip position use
	SetBounds so that perform layout is only called once. Also suspend
	and resume layout so layout is only done once for all controls.
	- Removed some debug fluff
	* SizeGrip.cs: Call base implmentation in overriding methods.
	- When visibility is changed the drawing buffers are killed so we
	need to redraw.

2005-01-11  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Calculate the open node count while drawing. This